--- a/Dicts.ipynb
+++ b/Dicts.ipynb
@@ -13,7 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from collections import defaultdict "
    ]
   },
   {
@@ -138,6 +139,97 @@
     "\n",
     "print(\"Records:\")\n",
     "display(df.to_dict(\"records\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Default Dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class 'int'>, {'machine': 10})\n",
+      "machine: 10\n",
+      "learning: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "word_counts = defaultdict(int)\n",
+    "word_counts[\"machine\"] = 10\n",
+    "print(word_counts)\n",
+    "print(\"machine:\", word_counts[\"machine\"])\n",
+    "print(\"learning:\", word_counts[\"learning\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating a dict from a list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### With no key values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': None, 'b': None, 'c': None}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict.fromkeys([\"a\", \"b\", \"c\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### With key values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 5, 'b': 5, 'c': 5}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict.fromkeys([\"a\", \"b\", \"c\"], 5)"
    ]
   }
  ],
