--- a/Lists.ipynb
+++ b/Lists.ipynb
@@ -34,10 +34,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## List comprenension"
    ]
@@ -158,6 +156,33 @@
     "df = pd.DataFrame(data, columns=[\"name\", \"age\"])\n",
     "print(\"\")\n",
     "print(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mapping list values with a function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[65, 66, 67]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(map(lambda letter: ord(letter), [\"A\", \"B\", \"C\"]))"
    ]
   }
  ],
