--- a/Loops.ipynb
+++ b/Loops.ipynb
@@ -9,11 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import itertools"
    ]
   },
   {
@@ -74,7 +75,7 @@
    ],
    "source": [
     "areas = [11.25, 18.0, 20.0, 10.75, 9.50]\n",
-    "for area in areas :\n",
+    "for area in areas:\n",
     "    print(area)"
    ]
   },
@@ -95,7 +96,7 @@
    ],
    "source": [
     "arr = np.array([5, 7, 9])\n",
-    "for item in arr :\n",
+    "for item in arr:\n",
     "\tprint(item)"
    ]
   },
@@ -164,18 +165,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Iterating over an array of arrays"
+    "## Iterating over a multidimensional array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Array:\n",
+      " [[ 5  7  9]\n",
+      " [11 13 15]]\n",
+      "\n",
+      "Items:\n",
       "5\n",
       "7\n",
       "9\n",
@@ -189,7 +195,48 @@
     "arr1 = np.array([5, 7, 9])\n",
     "arr2 = np.array([11, 13, 15])\n",
     "arr = np.array([arr1, arr2])\n",
+    "print(\"Array:\\n\", arr)\n",
+    "\n",
+    "print(\"\\nItems:\")\n",
     "for item in np.nditer(arr) :\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Iterating over a multidimensional list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List:\n",
+      " [['a', 'b', 'c'], ['d', 'e', 'f']]\n",
+      "\n",
+      "Items:\n",
+      "a\n",
+      "b\n",
+      "c\n",
+      "d\n",
+      "e\n",
+      "f\n"
+     ]
+    }
+   ],
+   "source": [
+    "items = [[\"a\", \"b\", \"c\"], [\"d\", \"e\", \"f\"]]\n",
+    "print(\"List:\\n\", items)\n",
+    "\n",
+    "print(\"\\nItems:\")\n",
+    "for item in itertools.chain.from_iterable(items):\n",
     "    print(item)"
    ]
   },
@@ -202,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,10 +320,43 @@
     }
    ],
    "source": [
-    "import itertools\n",
-    "\n",
     "for v1, v2 in itertools.product(list1, list2):\n",
     "    print(v1, v2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generating lists of combinations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[3, 'a'],\n",
+       " [3, 'b'],\n",
+       " [3, 'c'],\n",
+       " [5, 'a'],\n",
+       " [5, 'b'],\n",
+       " [5, 'c'],\n",
+       " [7, 'a'],\n",
+       " [7, 'b'],\n",
+       " [7, 'c']]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[list(items) for items in itertools.product(list1, list2)]"
    ]
   }
  ],
