--- a/Random Numbers.ipynb
+++ b/Random Numbers.ipynb
@@ -9,12 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import random"
+    "import random\n",
+    "from scipy.stats import uniform"
    ]
   },
   {
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,22 +43,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "items = list(range(20))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Chosing 1 random number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "13"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "random.choice([5, 10, 15])"
+    "np.random.choice(items)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Choosing multiple random numbers with replacement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2,  2,  6, 17, 19, 10,  1,  0, 17, 15])"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.choice(items, 10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Choosing multiple random numbers without replacement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([18, 11,  3, 19, 14, 17,  1, 12, 15, 10])"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.choice(items, 10, replace=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[12, 17, 16, 6, 11, 10, 1, 5, 18, 14]"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random.sample(items, 10)"
    ]
   },
   {
@@ -69,16 +160,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6964691855978616"
+       "0.3921175181941505"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,22 +180,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.28613933495037946"
+       "0.3431780161508694"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.random.random()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7290497073840416"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "uniform().rvs(1)[0]"
    ]
   },
   {
@@ -116,16 +227,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([4, 3, 3, 7, 6])"
+       "array([3, 4, 0, 0, 4])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,25 +254,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[89, 71],\n",
-       "       [14, 29],\n",
-       "       [64, 85],\n",
-       "       [37, 97],\n",
-       "       [41, 89],\n",
-       "       [64, 59],\n",
-       "       [78,  9],\n",
-       "       [79,  7],\n",
-       "       [66, 95],\n",
-       "       [71, 41]])"
+       "array([[50, 56],\n",
+       "       [68,  3],\n",
+       "       [85, 40],\n",
+       "       [67, 85],\n",
+       "       [48, 62],\n",
+       "       [49,  8],\n",
+       "       [93, 53],\n",
+       "       [98, 86],\n",
+       "       [95, 28],\n",
+       "       [35, 98]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,16 +290,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 1.05828038, -0.54181905,  2.57177461,  1.34761572,  0.25894582])"
+       "array([-0.32694623, -0.3082092 ,  0.82711746,  1.07078142, -3.05557742])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,14 +317,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The mean is 0.022 and the standard deviation is 0.052\n"
+      "The mean is 0.021 and the standard deviation is 0.054\n"
      ]
     }
    ],
@@ -221,6 +332,34 @@
     "# loc is the mean\n",
     "# scale is the standard deviation\n",
     "returns = np.random.normal(loc=0.02, scale=0.05, size=1000)\n",
+    "\n",
+    "mean = np.mean(returns)\n",
+    "std = np.std(returns)\n",
+    "print(\"The mean is %5.3f and the standard deviation is %5.3f\" %(mean, std))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Also possible using scipy's uniform function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mean is 0.504 and the standard deviation is 0.292\n"
+     ]
+    }
+   ],
+   "source": [
+    "returns = uniform().rvs(1000)\n",
     "\n",
     "mean = np.mean(returns)\n",
     "std = np.std(returns)\n",
