--- a/TF-IDF.ipynb
+++ b/TF-IDF.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Term Frequency Inverse Document Frequency (tf-idf)\n",
+    "## Term Frequency Inverse Document Frequency (tf-idf)\n",
     "\n",
     "* Rescale features by how informative we expect them to be\n",
     "* Give weight to any term that appears often in a particular document, but not in many documents\n",
