--- a/Arrays.ipynb
+++ b/Arrays.ipynb
@@ -703,6 +703,115 @@
     "print(\"\\nRows: All, Column: All except last:\\n\", arr[:,:-1])\n",
     "print(\"\\nRows: Last, Column: Last:\\n\", arr[-1,-1])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Flattening an array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 4, 6])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = np.array([[2], [4], [6]])\n",
+    "\n",
+    "# ravel: \"Return a contiguous flattened array.\"\n",
+    "y.ravel()\n",
+    "\n",
+    "# Same as:\n",
+    "# y.reshape(1, -1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generating a range of values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([50, 55, 60, 65, 70, 75, 80, 85, 90, 95])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(50, 100, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[50, 55, 60, 65, 70, 75, 80, 85, 90, 95]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Similar process to generate a list, but this doesn't work for decimals\n",
+    "list(range(50, 100, 5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generating a specific number of values between two other values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0., 10., 20., 30., 40., 50.])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# linspace = linear space\n",
+    "np.linspace(0, 50, 6)"
+   ]
   }
  ],
  "metadata": {
