--- a/Arrays.ipynb
+++ b/Arrays.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "from sklearn.metrics.pairwise import cosine_similarity"
    ]
   },
   {
@@ -811,6 +812,100 @@
    "source": [
     "# linspace = linear space\n",
     "np.linspace(0, 50, 6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculating the dot product"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "39"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([3, 4])\n",
+    "b = np.array([5, 6])\n",
+    "\n",
+    "# 3 * 5 + 4 * 6\n",
+    "np.dot(a, b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Shorthand"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "39"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a@b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Measuring cosine similarity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Manually: 0.7388188340435563\n",
+      "\n",
+      "Function:\n",
+      " [[1.         0.73881883]\n",
+      " [0.73881883 1.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([4, 7, 1])\n",
+    "b = np.array([5, 2, 3])\n",
+    "\n",
+    "dot_product = a@b\n",
+    "magnitude = np.sqrt(a[0]**2 + a[1]**2 + a[2]**2) * np.sqrt(b[0]**2 + b[1]**2 + b[2]**2)\n",
+    "print(\"Manually:\", dot_product / magnitude)\n",
+    "\n",
+    "sim = cosine_similarity([a, b])\n",
+    "print(\"\\nFunction:\\n\", sim)"
    ]
   }
  ],
