--- a/Categorical Variable Encoding.ipynb
+++ b/Categorical Variable Encoding.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +613,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -660,6 +662,73 @@
     "# We can avoid the error by passing handle_unknown=\"ignore\" to the OneHotEncoder constractuor\n",
     "# print(\"\\nTransformation on new data with unencoded values:\")\n",
     "# s3 = np.array([5]).reshape(-1, 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## One hot encoding an array\n",
+    "\n",
+    "Modified from [CNN course](https://campus.datacamp.com/courses/image-processing-with-keras-in-python/image-processing-with-neural-networks?ex=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Categories: ['dress' 'shirt' 'shoe']\n",
+      "\n",
+      "Zeros:\n",
+      "\n",
+      " [[0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]]\n",
+      "\n",
+      "OHE:\n",
+      "\n",
+      " [[0. 0. 1.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 1. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "labels = ['shoe', 'shirt', 'shoe', 'shirt', 'dress', 'dress', 'dress']\n",
+    "\n",
+    "# The unique values of categories in the data\n",
+    "categories = np.unique(labels)\n",
+    "print(\"Categories:\", categories)\n",
+    "\n",
+    "# The number of image categories\n",
+    "n_categories = len(categories)\n",
+    "\n",
+    "# Initialize ohe_labels as all zeros\n",
+    "ohe_labels = np.zeros((len(labels), n_categories))\n",
+    "print(\"\\nZeros:\\n\\n\", ohe_labels)\n",
+    "\n",
+    "# Loop over the labels\n",
+    "for ii in range(len(labels)):\n",
+    "    # Find the location of this label in the categories variable\n",
+    "    # Ex: For \"shoe\" it returns jj = [2]\n",
+    "    jj = np.where(categories == labels[ii])\n",
+    "    # Set the corresponding zero to one\n",
+    "    ohe_labels[ii, jj] = 1\n",
+    "\n",
+    "print(\"\\nOHE:\\n\\n\", ohe_labels)"
    ]
   },
   {
