--- a/Logistic Regression.ipynb
+++ b/Logistic Regression.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,13 +26,25 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(714, 5)\n",
+      "(714,)\n"
+     ]
+    }
+   ],
    "source": [
     "df = pd.read_csv(\"data/titantic-train.csv\")\n",
     "df = df[[\"Fare\", \"Age\", \"Pclass\", \"SibSp\", \"Parch\", \"Survived\"]].dropna()\n",
     "\n",
     "X = df.iloc[:, :-1]\n",
     "y = df.iloc[:, -1:].values.ravel()\n",
+    "\n",
+    "print(X.shape)\n",
+    "print(y.shape)\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1, stratify=y)"
    ]
