--- a/Strings.ipynb
+++ b/Strings.ipynb
@@ -121,6 +121,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## String replace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'bat'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"mat\".replace(\"m\", \"b\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Converting characters to other characters using string translate method"
    ]
   },
