--- a/Data Frames.ipynb
+++ b/Data Frames.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,11 +105,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Iterating over rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "20\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({\"price\": [10, 20, 30]})\n",
+    "\n",
+    "for index, row in df.iterrows():\n",
+    "    print(row[\"price\"])"
+   ]
   },
   {
    "cell_type": "markdown",
