--- a/Dicts.ipynb
+++ b/Dicts.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,8 +26,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -145,6 +147,156 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Iterating"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020-04-01: 6\n",
+      "2020-05-01: 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "dictionary = {\n",
+    "    \"2020-04-01\": 6,\n",
+    "    \"2020-05-01\": 8\n",
+    "}\n",
+    "\n",
+    "for key, value in dictionary.items() :\n",
+    "    print(key + \": \" + str(value))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Iterating by ascending value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "riker: 2\n",
+      "ava: 4\n",
+      "mason: 5\n",
+      "matt: 35\n"
+     ]
+    }
+   ],
+   "source": [
+    "ages = {\n",
+    "    \"matt\": 35,\n",
+    "    \"riker\": 2,\n",
+    "    \"mason\": 5,\n",
+    "    \"ava\": 4\n",
+    "}\n",
+    "\n",
+    "for name, age in sorted(ages.items(), key=lambda item: item[1]):\n",
+    "    print(\"{}: {}\".format(name, age))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Deleting an item"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New dict: {'b': 6, 'c': 7}\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = {\"a\": 5, \"b\": 6, \"c\": 7}\n",
+    "del d[\"a\"]\n",
+    "print(\"New dict:\", d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Or you can also return the deleted item:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New dict: {'b': 6, 'c': 7}\n",
+      "Deleted item: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = {\"a\": 5, \"b\": 6, \"c\": 7}\n",
+    "item = d.pop(\"a\")\n",
+    "print(\"New dict:\", d)\n",
+    "print(\"Deleted item:\", item)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Number of keys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = {\"a\": 5, \"b\": 6, \"c\": 7}\n",
+    "len(d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Default Dict"
    ]
   },
@@ -187,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +348,7 @@
        "{'a': None, 'b': None, 'c': None}"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +375,7 @@
        "{'a': 5, 'b': 5, 'c': 5}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
