--- a/Metrics.ipynb
+++ b/Metrics.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import confusion_matrix, plot_confusion_matrix, classification_report, accuracy_score, roc_curve, roc_auc_score\n",
+    "from sklearn.metrics import confusion_matrix, plot_confusion_matrix, classification_report, accuracy_score, roc_curve, roc_auc_score, mean_squared_log_error\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -268,6 +269,43 @@
    "source": [
     "y_pred_prob = rf.predict_proba(X_test)[:, 1]\n",
     "roc_auc_score(y_test, y_pred_prob)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mean Squared Log Error\n",
+    "\n",
+    "See [calculation method](https://peltarion.com/knowledge-center/documentation/modeling-view/build-an-ai-model/loss-functions/mean-squared-logarithmic-error-(msle))."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSLE function: 0.83\n",
+      "MSLE manual method 1: 0.83\n",
+      "MSLE manual method 2: 0.83\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_true = np.array([100])\n",
+    "y_pred = np.array([250])\n",
+    "msle_function = mean_squared_log_error(y_true, y_pred)\n",
+    "print(\"MSLE function: {:.2f}\".format(msle_function))\n",
+    "\n",
+    "msle_manual_1 = (np.log(y_true + 1) - np.log(y_pred + 1)) ** 2\n",
+    "print(\"MSLE manual method 1: {:.2f}\".format(msle_manual_1[0]))\n",
+    "\n",
+    "msle_manual_2 = (np.log((y_true + 1) / (y_pred + 1))) ** 2\n",
+    "print(\"MSLE manual method 2: {:.2f}\".format(msle_manual_2[0]))"
    ]
   }
  ],
