--- a/Categorical Variable Encoding.ipynb
+++ b/Categorical Variable Encoding.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "3       11           student                3                 1"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
        "3              2  0.0  1.0  0.0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
     "display(df)\n",
     "\n",
     "ct = ColumnTransformer(\n",
-    "    [('one_hot_encoder', OneHotEncoder(), [1, 2])],    # The column numbers to be transformed (here is [0] but can be [0, 1, 3])\n",
+    "    [('one_hot_encoder', OneHotEncoder(), [1, 2])], # The column numbers to be transformed\n",
     "    remainder='passthrough'                         # Leave the rest of the columns untouched\n",
     ")\n",
     "\n",
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1417,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1474,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1523,9 +1523,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\""
    ]
